Added books list
